[package]
name = "fx-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []


[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }

my-nosql-contracts = { tag = "0.1.37", git = "https://github.com/my-cfd-platform/my-nosql-contracts.git" }
async-trait = "*"
